--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,7 +6,7 @@
             LOGIN
         </title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-        <link rel="stylesheet" href="../static/css/log_reg.css">
+        <link rel="stylesheet" href="../static/css/cunty.css">
     </head>
     <body id="log_body">
         <div class="container-fluid" style = "height: 100vh">
