--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -3,20 +3,20 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>
-            register
+            REGISTER
         </title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="../static/css/log_reg.css">
+        <link rel="stylesheet" href="../static/css/cunty.css">
     </head>
-    <body id="reg_body">
+    <body>
       <div class="container-fluid" style = "height: 100vh">
          <div class="row">
             <div class="col">
              <div class="d-flex align-items-center py-5">
                   <div class="container">
                     <div class="row">
-                      <div class="col col-lg-8 mx-auto" id="reg_box">
+                      <div class="col col-lg-8 mx-auto">
 
                         <h1 class="text-center m-3 text-white display-1"> Crocodile Covers </h1>
                         <!-- <a href="/">
