--- a/app/templates/matches.html
+++ b/app/templates/matches.html
@@ -10,7 +10,18 @@
         <link rel="stylesheet" href="../static/css/cunty.css">
     </head>
     <body>
-      <div class="container-fluid" style = "height: 100vh">
-      </div>
+        <nav class="navbar fixed-bottom">
+            <div class="container-fluid justify-content-md-center">
+                <a class="navbar-brand p-2" href="#">
+                    <img src="../static/match.png" alt="MATCHES" width="30" height="30">
+                </a>
+                <a class="navbar-brand p-2" href="#">
+                    <img src="../static/arrow.png" alt="ARROW" width="30" height="30">
+                </a>
+                <a class="navbar-brand p-2" href="#">
+                    <img src="../static/profile.png" alt="PROFILE" width="30" height="30">
+                </a>
+            </div>
+        </nav>
     </body>
 </html>
