--- a/app/templates/swipe.html
+++ b/app/templates/swipe.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./static/style.css">
-    <script src="./js/script.js"></script>
+    <link rel="stylesheet" href="./static/css/style.css">
+    <script src="./static/js/script.js"></script>
   </head>
 
   <body>
     <div class="swipe-card">
-      <img class="card-img-top" src="walter.jpg" alt="Profile Image">
+      <img class="card-img-top" src="./static/images/walter.jpg" alt="Profile Image">
       <div class="card-body">
         <h5 class="card-title">Walter Dog</h5>
         <p class="card-text">College: Deez Nuts University</p>
@@ -25,7 +25,7 @@
     </div>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="./static/js/script.js"></script>
   </body>
 </html>
 
