--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -16,14 +16,14 @@
                 <div class="d-flex align-items-center py-5">
                   <div class="container">
                     <div class="row">
-                      <div class="col col-lg-8 mx-auto" id="log_box">
+                      <div class="col col-lg-8 mx-auto"">
 
-                        <h1 class="text-center m-3 text-white display-1"> Crocodile Covers </h1>
+                        <h1 id="pink" class="text-center m-3 display-1">Cvndy Cupid</h1>
           
                         <!-- <a href="/">
                           <img src = "../static/lyle.png" class="rounded mx-auto d-block" style = "height: 80px; width:80px">
                         </a> -->
-                        <h2 class="login-heading m-3 text-center text-warning">Login</h2>
+                        <h2 id="pink" class="login-heading m-3 text-center">Login</h2>
           
                         <!-- Sign In Form -->
                         <form class="px-4 py-3" action ="/auth" method="POST">
@@ -40,15 +40,15 @@
                           </div>
                 
                           <div class="text-center mt-4">
-                            <button type="submit" class="user_button btn btn-lg btn-outline-warning" name="sub1" value="Sign In">Login</button>
+                            <button type="submit" class="user_button btn btn-lg btn-outline-info" name="sub1" value="Sign In">Login</button>
                           </div>
 
                         </form>  
                         <div class="container-fluid text-center">
                           <p class="text-danger">{{status}}</p>
-                          <p class = "text-white"> Don't have an account? </p> 
+                          <p class = "text-secondary"> Don't have an account? </p> 
                           <form action="/register" method="GET">
-                            <button class="user_button btn btn-lg btn-outline-warning" value="register" name="sub1">Sign Up</button>
+                            <button class="user_button btn btn-lg btn-outline-info" value="register" name="sub1">Sign Up</button>
                           </form>  
                         </div> <!-- close register container -->
                     
