--- a/app/static/css/cunty.css
+++ b/app/static/css/cunty.css
@@ -1,3 +1,12 @@
 .navbar {
     background-color: #FF1D8E;
 }
+
+.btn {
+    background-color: #FF1D8E;
+    color: white;
+}
+
+#pink {
+    color: #FF1D8E;
+}
