--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -32,6 +32,11 @@
                           </div>
 
                           <div class="form-floating m-3">
+                            <input required type="text" class="form-control" name="full_name" id="form_name" placeholder="Full name">
+                            <label for="form_name">Full name</label>
+                          </div>
+
+                          <div class="form-floating m-3">
                             <input required type="text" class="form-control" name="username" id="form_user" placeholder="Username">
                             <label for="form_user">Username</label>
                           </div>
@@ -49,6 +54,12 @@
                           <div class="form-floating m-3">
                             <input required type="date" class="form-control" name="dob" id="form_dob" placeholder="Date of birth">  
                             <label for="form_dob">Date of birth</label>
+                          </div>
+
+                          <div class="form-floating m-3">
+                            <input required type="text" class="form-control" name="contact" id="form_contact" placeholder="Contact">  
+                            <label for="form_contact">Contact</label>
+                            <div id="form-text">Don't be shy! Let them hit you up!</div>
                           </div>
 
                           <div class="form-floating m-3">
