--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -40,6 +40,12 @@
             </div>
           </div>
           <div class="mb-3 row">
+            <label for="contact" class="col-sm-4 col-form-label">Date of Birth</label>
+            <div class="col-sm-8">
+              <input type="date" readonly class="form-control-plaintext" id="dob" value="{{dob}}">
+            </div>
+          </div>
+          <div class="mb-3 row">
             <label for="contact" class="col-sm-4 col-form-label">Contact</label>
             <div class="col-sm-8">
               <input type="text" readonly class="form-control-plaintext" id="contact" value="{{contact}}">
