--- a/app/templates/swipe.html
+++ b/app/templates/swipe.html
@@ -1,26 +1,45 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
-    <title>Tinder Swiping</title>
+    <title>SWIPE</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./static/css/style.css">
+    <link rel="stylesheet" href="./static/css/cunty.css">
     <script src="./static/js/script.js"></script>
   </head>
 
   <body>
-    <div class="swipe-card">
-      <img class="card-img-top" src="./static/images/walter.jpg" alt="Profile Image">
-      <div class="card-body">
-        <h5 class="card-title">Walter Dog</h5>
-        <p class="card-text">College: Deez Nuts University</p>
-        <p class="card-text">Major: Queenology</p>
-        <p class="card-text">Bio: Mother, Slayer, Walter.</p>
+    <nav class="navbar fixed-bottom">
+      <div class="container-fluid justify-content-md-center">
+        <a class="navbar-brand p-2" href="/matches">
+          <img src="../static/match.png" alt="MATCHES" width="30" height="30">
+        </a>
+        <a class="navbar-brand p-2" href="#">
+          <img src="../static/arrow.png" alt="ARROW" width="30" height="30">
+        </a>
+        <a class="navbar-brand p-2" href="#">
+          <img src="../static/profile.png" alt="PROFILE" width="30" height="30">
+        </a>
       </div>
-      <div class="swipe-buttons">
-        <button class="btn btn-danger" onclick="swipeLeft()">EWW!</button>
-        <button class="btn btn-success" onclick="swipeRight()">GIMME!</button>
+    </nav>
+    <div class="container h-50 w-50">
+      <div class="row">
+        <div class="swipe-card">
+          <img class="card-img-top" src="./static/images/walter.jpg" alt="Profile Image">
+          <div class="card-body">
+            <h5 class="card-title">Walter Dog</h5>
+            <p class="card-text">College: Deez Nuts University</p>
+            <p class="card-text">Major: Queenology</p>
+            <p class="card-text">Bio: Mother, Slayer, Walter.</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="swipe-buttons">
+          <button class="btn btn-danger" onclick="swipeLeft()">EWW!</button>
+          <button class="btn btn-success" onclick="swipeRight()">GIMME!</button>
+        </div>
       </div>
     </div>
 
