--- a/app/templates/swipe.html
+++ b/app/templates/swipe.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./static/css/cunty.css">
-    <script src="./static/js/script.js"></script>
+    <link rel="stylesheet" href="../static/css/cunty.css">
+    <script src="../static/js/script.js"></script>
   </head>
 
   <body>
