--- a/app/templates/swipe.html
+++ b/app/templates/swipe.html
@@ -10,19 +10,38 @@
   </head>
 
  <body>
-    <div class="swipe-card">
-      <img class="card-img-top" src="walter.jpg" alt="Profile Image">
-      <div class="card-body">
-        <h5 class="card-title">Walter Dog</h5>
-        <p class="card-text">College: Deez Nuts University</p>
-        <p class="card-text">Major: Queenology</p>
-        <p class="card-text">Bio: Mother, Slayer, Walter.</p>
+  <nav class="navbar fixed-bottom">
+    <div class="container-fluid justify-content-md-center">
+      <a class="navbar-brand p-2" href="/matches">
+        <img src="../static/match.png" alt="MATCHES" width="30" height="30">
+      </a>
+      <a class="navbar-brand p-2" href="#">
+        <img src="../static/arrow.png" alt="ARROW" width="30" height="30">
+      </a>
+      <a class="navbar-brand p-2" href="#">
+        <img src="../static/profile.png" alt="PROFILE" width="30" height="30">
+      </a>
+    </div>
+  </nav>
+  <div class="container h-50 w-50">
+    <div class="row">
+      <div class="swipe-card">
+        <img class="card-img-top" src="{{pfp}}" alt="Profile Picture">
+        <div class="card-body">
+          <h5 class="card-title">{{full_name}}</h5>
+          <p class="card-text">College: {{college}}</p>
+          <p class="card-text">Major: {{major}}</p>
+          <p class="card-text">Bio: {{bio}}</p>
+        </div>
       </div>
+    </div>
+    <div class="row">
       <div class="swipe-buttons">
         <button class="btn btn-danger" onclick="swipeLeft()">EWW!</button>
         <button class="btn btn-success" onclick="swipeRight()">GIMME!</button>
       </div>
     </div>
+  </div>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="./script.js"></script>
