--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -15,10 +15,10 @@
           <a class="navbar-brand p-2" href="/matches">
             <img src="../static/match.png" alt="MATCHES" width="30" height="30">
           </a>
-          <a class="navbar-brand p-2" href="#">
+          <a class="navbar-brand p-2" href="/swipe">
             <img src="../static/arrow.png" alt="ARROW" width="30" height="30">
           </a>
-          <a class="navbar-brand p-2" href="#">
+          <a class="navbar-brand p-2" href="/profile">
             <img src="../static/profile.png" alt="PROFILE" width="30" height="30">
           </a>
         </div>
