--- a/app/templates/swipe.html
+++ b/app/templates/swipe.html
@@ -15,16 +15,16 @@
       <a class="navbar-brand p-2" href="/matches">
         <img src="../static/match.png" alt="MATCHES" width="30" height="30">
       </a>
-      <a class="navbar-brand p-2" href="#">
+      <a class="navbar-brand p-2" href="/swipe">
         <img src="../static/arrow.png" alt="ARROW" width="30" height="30">
       </a>
-      <a class="navbar-brand p-2" href="#">
+      <a class="navbar-brand p-2" href="/profile">
         <img src="../static/profile.png" alt="PROFILE" width="30" height="30">
       </a>
     </div>
   </nav>
-  <div class="container h-50 w-50">
-    <div class="row">
+  <div class="justify-content-center h-50 w-50 align-content-center bg-white">
+    <div class="row justify-content-center">
       <div class="swipe-card">
         <img class="card-img-top" src="{{pfp}}" alt="Profile Picture">
         <div class="card-body">
