--- a/app/static/css/cunty.css
+++ b/app/static/css/cunty.css
@@ -13,15 +13,9 @@
 
 body {
     background: linear-gradient(0deg, #ffbfff, #ff80e1) no-repeat center center fixed;
-    /* overflow: hidden; */
-    font-family: sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* min-height: 100vh; Set minimum height of the viewport */
   }
 
-  .card-img-top {
+/* .card-img-top {
     width: 50%;
     height: auto;
     object-fit: cover;
@@ -29,26 +23,17 @@ body {
     margin-bottom: 20px;
   }
   
-  /* .btn {
+  .btn {
     font-size: 3.5rem;
     border-radius: 20px;
     width: auto;
-  } */
+  }
   
-  .swipe-card {
-    width: 100%;
-    max-width: 1000px;
-    height: 80vh;
+.swipe-card {
     background-color: #fff;
     border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin: auto; /* Center the card horizontally */
   }
   
   .swipe-card .card-img-top {
@@ -87,4 +72,4 @@ body {
   .swipe-card .swipe-buttons .btn {
     flex-grow: 1;
     margin: 0 10px;
-  }
+  } */
