--- a/app/templates/matches.html
+++ b/app/templates/matches.html
@@ -12,13 +12,13 @@
     <body>
         <nav class="navbar fixed-bottom">
             <div class="container-fluid justify-content-md-center">
-                <a class="navbar-brand p-2" href="#">
+                <a class="navbar-brand p-2" href="/matches">
                     <img src="../static/match.png" alt="MATCHES" width="30" height="30">
                 </a>
-                <a class="navbar-brand p-2" href="#">
+                <a class="navbar-brand p-2" href="/swipe">
                     <img src="../static/arrow.png" alt="ARROW" width="30" height="30">
                 </a>
-                <a class="navbar-brand p-2" href="#">
+                <a class="navbar-brand p-2" href="/profile">
                     <img src="../static/profile.png" alt="PROFILE" width="30" height="30">
                 </a>
             </div>
