--- a/app/templates/matches.html
+++ b/app/templates/matches.html
@@ -23,5 +23,14 @@
                 </a>
             </div>
         </nav>
+        <div class="justify-content-center">
+            <h1 id="pink" class="text-center m-3 display-1"> Cvndy Cupid </h1>
+            <h2 class="m-3 text-center text-light display-6">Your Matches</h2>
+        </div>
+        <div class="container d-flex">
+            <div class="row">
+                
+            </div>
+        </div>
     </body>
 </html>
