--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -59,7 +59,7 @@
                           <div class="form-floating m-3">
                             <input required type="text" class="form-control" name="contact" id="form_contact" placeholder="Contact">  
                             <label for="form_contact">Contact</label>
-                            <div id="form-text">Don't be shy! Let them hit you up!</div>
+                            <div class="form-text">Don't be shy! Let them hit you up!</div>
                           </div>
 
                           <div class="form-floating m-3">
