--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -23,9 +23,13 @@
           </a>
         </div>
       </nav>
-      <div class="position-absolute top-50 start-50 translate-middle bg-body-tertiary rounded p-4">
+      <div class="justify-content-center">
+          <h1 id="pink" class="m-3 text-center display-1"> Cvndy Cupid </h1>
+          <h2 class="m-3 text-center text-light display-6">Profile</h2>
+      </div>
+      <div class="d-flex flex-column w-50 h-50 mx-auto bg-body-tertiary rounded p-4" style="overflow: scroll;">
         <div class="mb-3 row justify-content-center">
-          <img src="{{pfp}}" class="w-25 h-25" alt="Profile Picture" >
+          <img src="{{pfp}}" class="w-25 h-25 rounded-5" alt="Profile Picture" >
         </div>
         <div class="mb-3 row">
             <label for="username" class="col-sm-4 col-form-label">Username</label>
@@ -69,12 +73,10 @@
               <input type="text" readonly class="form-control-plaintext" id="bio" value="{{bio}}">
             </div>
           </div>
-          <div class="mb-3 row">
-            <center>
+          <div class="mb-3 row text-center">
               <form action="/logout" method="GET">
-                <button type="button" class="btn" value="logout">Logout</button>
+                <button type="button" class="btn btn-outline-info" value="logout">Logout</button>
               </form>
-            </center>
           </div>
       </div>
     </body>
