--- a/app/templates/swipe.html
+++ b/app/templates/swipe.html
@@ -4,48 +4,65 @@
     <title>SWIPE</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../static/css/cunty.css">
-    <script src="../static/js/script.js"></script>
+    <script src="../static/js/cunty.js"></script>
   </head>
 
- <body>
-  <nav class="navbar fixed-bottom">
-    <div class="container-fluid justify-content-md-center">
-      <a class="navbar-brand p-2" href="/matches">
-        <img src="../static/match.png" alt="MATCHES" width="30" height="30">
-      </a>
-      <a class="navbar-brand p-2" href="/swipe">
-        <img src="../static/arrow.png" alt="ARROW" width="30" height="30">
-      </a>
-      <a class="navbar-brand p-2" href="/profile">
-        <img src="../static/profile.png" alt="PROFILE" width="30" height="30">
-      </a>
-    </div>
-  </nav>
-  <div class="justify-content-center h-50 w-50 align-content-center bg-white">
-    <div class="row justify-content-center">
-      <div class="swipe-card">
-        <img class="card-img-top" src="{{pfp}}" alt="Profile Picture">
-        <div class="card-body">
-          <h5 class="card-title">{{full_name}}</h5>
-          <p class="card-text">College: {{college}}</p>
-          <p class="card-text">Major: {{major}}</p>
-          <p class="card-text">Bio: {{bio}}</p>
-        </div>
+  <body>
+    <nav class="navbar fixed-bottom">
+      <div class="container-fluid justify-content-md-center">
+        <a class="navbar-brand p-2" href="/matches">
+          <img src="../static/match.png" alt="MATCHES" width="30" height="30">
+        </a>
+        <a class="navbar-brand p-2" href="/swipe">
+          <img src="../static/arrow.png" alt="ARROW" width="30" height="30">
+        </a>
+        <a class="navbar-brand p-2" href="/profile">
+          <img src="../static/profile.png" alt="PROFILE" width="30" height="30">
+        </a>
       </div>
+    </nav>
+    <div class="justify-content-center">
+      <h1 id="pink" class="text-center m-3 display-1"> Cvndy Cupid </h1>
+      <h2 class="m-3 text-center text-light display-6">Swipe</h2>
     </div>
-    <div class="row">
-      <div class="swipe-buttons">
-        <button class="btn btn-danger" onclick="swipeLeft()">EWW!</button>
-        <button class="btn btn-success" onclick="swipeRight()">GIMME!</button>
+    <div class="swipe overflow-hidden w-100 h-100 d-flex flex-column position-relative">
+      <div id="swipe_status" class="position-absolute">
+        <i class="fa fa-remove"></i>
+        <i class="fa fa-heart"></i>
       </div>
-    </div>
-  </div>
+      <div id="cards" class="d-flex flex-grow-1 align-items-end justify-content-center">
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="./script.js"></script>
-  </body>
+        <div class="card mx-auto bg-body-tertiary">
+          <img class="card-img-top" src="{{pfp}}" alt="Profile Picture">
+          <div class="card-body">
+            <h5 class="card-title">{{full_name}}</h5>
+            <p class="card-text">College: {{college}}</p>
+            <p class="card-text">Major: {{major}}</p>
+            <p class="card-text">Bio: {{bio}}</p>
+          </div>
+        </div>
+        
+        <div class="card mx-auto bg-body-tertiary">
+          <img class="object-fit-cover card-img-top" src="{{pfp}}" alt="Profile Picture">
+          <div class="card-body">
+            <h5 class="card-title">{{full_name}}</h5>
+            <p class="card-text">College: {{college}}</p>
+            <p class="card-text">Major: {{major}}</p>
+            <p class="card-text">Bio: {{bio}}</p>
+          </div>
+        </div>
+        
+      </div>
+      <div id="swipeBtns" class="text-center mt-3">
+        <button class="btn btn-outline-danger" id="left">EWW!</button>
+        <button class="btn btn-outline-success" id="right">GIMME!</button>
+      </div>
+    </div>
+
+    <script src="../static/js/cunty.js"></script>
   </body>
 </html>
 
