--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -26,7 +26,7 @@
                         <form class="px-4 py-3" action ="/signup" method="POST">
                           
                           <div class="form-floating m-3">
-                            <input required type="url" class="form-control" name="pfp" id="form_pfp" placeholder="Profile Picture">  
+                            <input required type="text" class="form-control" name="pfp" id="form_pfp" placeholder="Profile Picture">  
                             <label for="form_pfp">Profile Picture</label>
                             <div class="form-text">Use google drive share link and make sure anyone with link can view</div>
                           </div>
