--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -75,7 +75,7 @@
           </div>
           <div class="mb-3 row text-center">
               <form action="/logout" method="GET">
-                <button type="button" class="btn btn-outline-info" value="logout">Logout</button>
+                <button type="submit" class="btn btn-outline-info" value="logout">Logout</button>
               </form>
           </div>
       </div>
