--- a/app/templates/matches.html
+++ b/app/templates/matches.html
@@ -27,9 +27,42 @@
             <h1 id="pink" class="text-center m-3 display-1"> Cvndy Cupid </h1>
             <h2 class="m-3 text-center text-light display-6">Your Matches</h2>
         </div>
-        <div class="container d-flex">
+        <div class="container d-flex justify-content-center overflow-scroll">
             <div class="row">
-                
+                    <div class="card m-2">
+                        <img class="card-img-top" src="../static/arlette.png" alt="Profile Picture">
+                        <div class="card-body">
+                          <h5 class="card-title">Arlette Duran</h5>
+                          <p class="card-text">Date of Birth: 03/11/2005</p>
+                          <p class="card-text">College: Harvard University</p>
+                          <p class="card-text">Major: Biomedical Engineering</p>
+                          <p class="card-text">Bio: PURR.</p>
+                          <p class="card-text">Contact: aduran30@stuy.edu</p>
+                        </div>
+                      </div>
+                    <div class="card m-2">
+                        <img class="card-img-top" src="../static/sam.jpeg" alt="Profile Picture">
+                        <div class="card-body">
+                            <h5 class="card-title">Samantha Farrow</h5>
+                            <p class="card-text">Date of Birth: 08/12/2005</p>
+                            <p class="card-text">College: Wesleyan University</p>
+                            <p class="card-text">Major: Economics and Sociology</p>
+                            <p class="card-text">Bio: MEOOOOOWWWWWWWW.</p>
+                            <p class="card-text">Contact: sfarrow30@stuy.edu</p>
+                        </div>
+                    </div>
+                    <div class="card m-2">
+                        <img class="card-img-top" src="../static/suki.jpeg" alt="Profile Picture">
+                        <div class="card-body">
+                            <h5 class="card-title">Sukanya Ferguson</h5>
+                            <p class="card-text">Date of Birth: 03/02/2005</p>
+                            <p class="card-text">College: Cornell University</p>
+                            <p class="card-text">Major: Law and Society</p>
+                            <p class="card-text">Bio: RAHHHHH</p>
+                            <p class="card-text">Contact: sferguson30@stuy.edu</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
