--- a/app/templates/swipe.html
+++ b/app/templates/swipe.html
@@ -8,6 +8,27 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../static/css/cunty.css">
     <script src="../static/js/cunty.js"></script>
+    <style>
+      .card {
+          width: 385px;
+          height: 500px;
+          position: absolute;
+          top: 30%;
+          left: 50%;
+          transform: translateX(-50%) translateY(-50%) scale(0.95);
+      }
+
+      .card-img-top {
+          height: 350px;
+      }
+
+      #swipeBtns {
+          width: 385px;
+          position: absolute;
+          bottom: 20%;
+          left: 38%;
+      }
+    </style>
   </head>
 
   <body>
@@ -32,30 +53,30 @@
     <div id="board">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
       <div class="card">
-        <img class="card-img-top" src="{{pfp}}" alt="Profile Picture">
+        <img class="card-img-top" src="../static/ayman.JPG" alt="Profile Picture">
         <div class="card-body">
-          <h5 class="card-title">{{full_name}}</h5>
-          <p class="card-text">Date of Birth: {{dob}}</p>
-          <p class="card-text">College: {{college}}</p>
-          <p class="card-text">Major: {{major}}</p>
-          <p class="card-text">Bio: {{bio}}</p>
+          <h5 class="card-title">Ayman Habib</h5>
+          <p class="card-text">Date of Birth: 06/11/2005</p>
+          <p class="card-text">College: Binghamton University</p>
+          <p class="card-text">Major: Computer Science</p>
+          <p class="card-text">Bio: U WANT THIS KINGBUSSY?!?</p>
         </div>
       </div>
 
       <div class="card">
-        <img class="card-img-top" src="{{pfp}}" alt="Profile Picture">
+        <img class="card-img-top" src="../static/yuki.jpeg" alt="Profile Picture">
         <div class="card-body">
-          <h5 class="card-title">{{full_name}}</h5>
-          <p class="card-text">Date of Birth: {{dob}}</p>
-          <p class="card-text">College: {{college}}</p>
-          <p class="card-text">Major: {{major}}</p>
-          <p class="card-text">Bio: {{bio}}</p>
+          <h5 class="card-title">Yuki Feng</h5>
+          <p class="card-text">Date of Birth: 02/10/2005</p>
+          <p class="card-text">College: Northeastern University</p>
+          <p class="card-text">Major: Computer science and design</p>
+          <p class="card-text">Bio: Buy me a lilac bouquet.</p>
         </div>
       </div>
 
     </div>
     <div id="swipeBtns" class="text-center">
-      <button class="btn btn-outline-danger" id="left">EWW!</button>
+      <button class="btn btn-outline-danger" id="left">Nah.</button>
       <button class="btn btn-outline-success" id="right">GIMME!</button>
     </div>
     <script>
@@ -258,9 +279,19 @@
 
                 card.classList.add('card')
 
-                card.style.backgroundImage =
-                    "url('https://picsum.photos/320/320/?random=" + Math.round(Math.random() * 1000000) + "')"
+                // card.style.backgroundImage =
+                //     "url('https://picsum.photos/320/320/?random=" + Math.round(Math.random() * 1000000) + "')"
 
+                // card.innerHTML = "
+                // <img class='card-img-top' src=''../static/yuki.jpeg' alt='Profile Picture'>
+                // <div class='card-body'>
+                //   <h5 class='card-title'>Yuki Feng</h5>
+                //   <p class='card-text'>Date of Birth: 02/10/2005</p>
+                //   <p class='card-text'>College: Northeastern University</p>
+                //   <p class='card-text'>Major: Computer science and design</p>
+                //   <p class='card-text'>Bio: Buy me a lilac bouquet.</p>
+                // </div>
+                // "
                 this.board.insertBefore(card, this.board.firstChild)
 
             }
