--- a/app/templates/matches.html
+++ b/app/templates/matches.html
@@ -27,9 +27,9 @@
             <h1 id="pink" class="text-center m-3 display-1"> Cvndy Cupid </h1>
             <h2 class="m-3 text-center text-light display-6">Your Matches</h2>
         </div>
-        <div class="container d-flex justify-content-center overflow-scroll">
+        <div class="container d-flex justify-content-center">
             <div class="row">
-                    <div class="card m-2">
+                    <div class="card m-2 overflow-scroll">
                         <img class="card-img-top" src="../static/arlette.png" alt="Profile Picture">
                         <div class="card-body">
                           <h5 class="card-title">Arlette Duran</h5>
@@ -40,7 +40,7 @@
                           <p class="card-text">Contact: aduran30@stuy.edu</p>
                         </div>
                       </div>
-                    <div class="card m-2">
+                    <div class="card m-2 overflow-scroll">
                         <img class="card-img-top" src="../static/sam.jpeg" alt="Profile Picture">
                         <div class="card-body">
                             <h5 class="card-title">Samantha Farrow</h5>
@@ -51,7 +51,7 @@
                             <p class="card-text">Contact: sfarrow30@stuy.edu</p>
                         </div>
                     </div>
-                    <div class="card m-2">
+                    <div class="card m-2 overflow-scroll">
                         <img class="card-img-top" src="../static/suki.jpeg" alt="Profile Picture">
                         <div class="card-body">
                             <h5 class="card-title">Sukanya Ferguson</h5>
