--- a/app/templates/swipe.html
+++ b/app/templates/swipe.html
@@ -16,6 +16,7 @@
           top: 30%;
           left: 50%;
           transform: translateX(-50%) translateY(-50%) scale(0.95);
+          overflow: scroll;
       }
 
       .card-img-top {
@@ -72,6 +73,37 @@
           <p class="card-text">Major: Computer science and design</p>
           <p class="card-text">Bio: Buy me a lilac bouquet.</p>
         </div>
+      </div>
+
+      <div class="card">
+        <img class="card-img-top" src="../static/arlette.png" alt="Profile Picture">
+        <div class="card-body">
+          <h5 class="card-title">Arlette Duran</h5>
+          <p class="card-text">Date of Birth: 03/11/2005</p>
+          <p class="card-text">College: Harvard University</p>
+          <p class="card-text">Major: Biomedical Engineering</p>
+          <p class="card-text">Bio: PURR.</p>
+        </div>
+      </div>
+      <div class="card">
+          <img class="card-img-top" src="../static/sam.jpeg" alt="Profile Picture">
+          <div class="card-body">
+              <h5 class="card-title">Samantha Farrow</h5>
+              <p class="card-text">Date of Birth: 08/12/2005</p>
+              <p class="card-text">College: Wesleyan University</p>
+              <p class="card-text">Major: Economics and Sociology</p>
+              <p class="card-text">Bio: MEOOOOOWWWWWWWW.</p>
+          </div>
+      </div>
+      <div class="card">
+          <img class="card-img-top" src="../static/suki.jpeg" alt="Profile Picture">
+          <div class="card-body">
+              <h5 class="card-title">Sukanya Ferguson</h5>
+              <p class="card-text">Date of Birth: 03/02/2005</p>
+              <p class="card-text">College: Cornell University</p>
+              <p class="card-text">Major: Law and Society</p>
+              <p class="card-text">Bio: RAHHHHH</p>
+          </div>
       </div>
 
     </div>
