--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -29,7 +29,7 @@
       </div>
       <div class="d-flex flex-column w-50 h-50 mx-auto bg-body-tertiary rounded p-4" style="overflow: scroll;">
         <div class="mb-3 row justify-content-center">
-          <img src="{{pfp}}" class="w-25 h-25 rounded-5" alt="Profile Picture" >
+          <img src="{{pfp}}" class="w-50 rounded-5" alt="Profile Picture" >
         </div>
         <div class="mb-3 row">
             <label for="username" class="col-sm-4 col-form-label">Username</label>
